--- a/templates/document_head.hbs
+++ b/templates/document_head.hbs
@@ -1,1 +1,10 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+{{!-- Start Greg --}}
+<!-- UIkit CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.3/dist/css/uikit.min.css" />
+
+<!-- UIkit JS -->
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.3/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.3/dist/js/uikit-icons.min.js"></script>
+{{!-- End Greg --}}
