--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -1,13 +1,19 @@
+<section id="main-content" class="section hero uk-light">
+
+</section>
+
 <div class="container-divider"></div>
 <div class="container">
   <nav class="sub-nav">
     {{breadcrumbs}}
     <div class="search-container">
-      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="search-icon">
+      {{!-- Start Greg --}}
+      {{!-- <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="search-icon">
         <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
         <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
-      </svg>
-      {{search submit=false}}
+      </svg> --}}
+      {{search submit=false class='search uk-search uk-search-default'}}
+      {{!-- End Greg --}}
     </div>
   </nav>
 
