--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -1,25 +1,47 @@
-<footer class="footer">
-  <div class="footer-inner">
-    {{#link 'help_center'}}{{help_center.name}}{{/link}}
+<style>
+  .uk-modal-close-full {
+    background: transparent;
+}
+</style>
 
-    <div class="footer-language-selector">
-      {{#if alternative_locales}}
-        <div class="dropdown language-selector">
-          <button class="dropdown-toggle" aria-haspopup="true">
-            {{current_locale.name}}
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon">
-              <path fill="none" stroke="currentColor" stroke-linecap="round" d="M3 4.5l2.6 2.6c.2.2.5.2.7 0L9 4.5"/>
-            </svg>
-          </button>
-          <span class="dropdown-menu dropdown-menu-end" role="menu">
-            {{#each alternative_locales}}
-              <a href="{{url}}" dir="{{direction}}" rel="nofollow" role="menuitem">
-                {{name}}
-              </a>
-            {{/each}}
-          </span>
+<div class="uk-section uk-section-secondary">
+  <div class="uk-width-1-1"> 
+    <div class="uk-container uk-container-default">
+      <div uk-grid>
+        <div class="uk-width-1-2">
+          {{#link 'help_center'}}{{help_center.name}}{{/link}}
         </div>
-      {{/if}}
+        <div class="uk-width-1-2">
+          {{#if alternative_locales}}
+            <a class="uk-button uk-button-default" href="#language-modal" uk-toggle>{{current_locale.name}}</a>
+            <div id="language-modal" class="uk-modal-full" uk-modal>
+              <div class="uk-modal-dialog uk-background-secondary">
+                  <button class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
+                  <div class="uk-flex-middle uk-text-center" uk-grid uk-height-viewport>
+                      <div class="uk-width-1-1 uk-padding-large">
+                        <ul class="uk-nav uk-nav-primary">
+                          {{#each alternative_locales}}
+                            <li>
+                              <a href="{{url}}" dir="{{direction}}" rel="nofollow" role="menuitem">
+                                {{name}}
+                              </a>
+                            </li>
+                          {{/each}}
+                        </ul>
+                      </div>
+                  </div>
+              </div>
+            </div>
+          {{/if}}
+        </div>
+      </div>
     </div>
   </div>
-</footer>
+</div>
+
+<script>
+  $( document ).ready(function() {
+    $('form.search > input#query').addClass( "uk-search-input" );
+    $('.search').prepend("<span uk-search-icon></span>");
+  });
+</script>
