--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,43 +1,66 @@
-<a class="skip-navigation" tabindex="1" href="#main-content">{{t 'skip_navigation' }}</a>
+<style>
+  .tm-header {
+    left: 0;
+    right: 0;
+}
 
-<header class="header">
-  <div class="logo">
-    {{#link 'help_center'}}
-      <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}">
-    {{/link}}
-  </div>
-  <div class="nav-wrapper">
-    <button class="menu-button" aria-controls="user-nav" aria-expanded="false" aria-label="{{t 'toggle_navigation'}}">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" focusable="false" viewBox="0 0 16 16" class="icon-menu">
-        <path fill="none" stroke="currentColor" stroke-linecap="round" d="M1.5 3.5h13m-13 4h13m-13 4h13"/>
-      </svg>
-    </button>
-    <nav class="user-nav" id="user-nav">
-      {{link 'community'}}
-      {{link 'new_request' class='submit-a-request'}}
-    </nav>
-    {{#if signed_in}}
-      <div class="user-info dropdown">
-        <button class="dropdown-toggle" aria-haspopup="true">
-          {{user_avatar class="user-avatar"}}
-          <span class="hide-on-mobile">
-            {{user_name}}
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon" aria-hidden="true">
-              <path fill="none" stroke="currentColor" stroke-linecap="round" d="M3 4.5l2.6 2.6c.2.2.5.2.7 0L9 4.5"/>
-            </svg>
-          </span>
-        </button>
-        <div class="dropdown-menu" role="menu">
-          {{link "my_activities" role="menuitem"}}
-          {{my_profile role="menuitem"}}
-          {{change_password role="menuitem"}}
-          {{link "sign_out" role="menuitem"}}
+.uk-nav>li>button {
+    padding: 5px 0;
+    display: block;
+    border: none;;
+    background-color: transparent;
+    text-align: left;
+    color: #999;
+}
+</style>
+
+<div class="tm-header uk-position-absolute">
+  <div class="uk-navbar-container uk-sticky uk-navbar-transparent uk-light">
+    <div class="uk-container">
+      <nav uk-navbar>
+        <div class="uk-navbar-left">
+
+            <a class="uk-navbar-item uk-logo" href="#">
+              {{#link 'help_center'}}
+                <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}">
+              {{/link}}
+            </a>
+
+            <ul class="uk-navbar-nav">
+                <li><a href="#">Item 1</a></li>
+                <li><a href="#">Item 2</a></li>
+            </ul>
+
         </div>
-      </div>
-    {{else}}
-      {{#link "sign_in" class="sign-in"}}
-        {{t 'sign_in'}}
-      {{/link}}
-    {{/if}}
+        <div class="uk-navbar-right">
+
+            <ul class="uk-navbar-nav">
+                <li>{{link 'community'}}</li>
+                <li>{{link 'new_request' class='submit-a-request'}}</li>
+                {{#if signed_in}}
+                  <li>
+                    {{!-- {{user_avatar class="uk-border-circle"}} --}}
+                    <a href="#">{{user_name}}</a>
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li>{{link "my_activities" role="menuitem"}}</li>
+                            <li>{{my_profile role="menuitem"}}</li>
+                            <li>{{change_password role="menuitem"}}</li>
+                            <li>{{link "sign_out" role="menuitem"}}</li>
+                        </ul>
+                    </div>
+                  </li>
+                {{else}}
+                  <li>
+                    {{#link "sign_in" class="sign-in"}}
+                      {{t 'sign_in'}}
+                    {{/link}}
+                  </li>
+                {{/if}}
+            </ul>
+
+        </div>
+      </nav>
+    </div>
   </div>
-</header>
+</div>
