--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -1,81 +1,99 @@
 {{!-- <h1 class="visibility-hidden">{{ help_center.name }}</h1> --}}
 
-<div class="uk-section uk-section-default uk-section-xlarge uk-background-cover uk-flex uk-flex-middle uk-light" style="background-image: url(https://images.unsplash.com/photo-1590212151175-e58edd96185b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80)">
-   <div class="uk-width-1-1 uk-text-center"> 
-    <div class="uk-container uk-container-default">
-      <h1 class="uk-heading-large">{{ help_center.name }}</h1>
-      {{search submit=false instant=settings.instant_search class='search search-full uk-search uk-search-large'}}
-    </div>
-   </div>
+<div class="uk-section uk-section-secondary uk-section-xlarge uk-background-cover uk-flex uk-flex-middle"
+	style="background-image: url(https://images.unsplash.com/photo-1590212151175-e58edd96185b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80)">
+	<div class="uk-width-1-1 uk-text-center">
+		<div class="uk-container uk-container-default">
+			<h1 class="uk-heading-large">{{ help_center.name }}</h1>
+			{{search submit=false instant=settings.instant_search class='search search-full uk-search uk-search-large'}}
+		</div>
+	</div>
+</div>
+
+<div class="uk-section uk-section-default">
+	<div class="uk-width-1-1 uk-text-center">
+		<div class="uk-container uk-container-default">
+			{{!-- <h2>{{ t 'categories' }}</h2> --}}
+			<div uk-grid class="uk-child-width-1-3@m uk-grid-match">
+				{{#each categories}}
+				{{#if ../has_multiple_categories}}
+				<div>
+					<div class="uk-card uk-card-default uk-card-body">
+						<a href='{{url}}' class="blocks-item-link">
+							<h3 class="uk-card-title">{{name}}</h3>
+							<p class="">{{excerpt description}}</p>
+						</a>
+					</div>
+				</div>
+				{{else}}
+				{{#each sections}}
+				<div>
+					<div class="uk-card uk-card-default uk-card-body">
+						<a href='{{url}}' class="blocks-item-link">
+							<h3 class="uk-card-title">{{name}}</h3>
+							<p class="">{{excerpt description}}</p>
+						</a>
+					</div>
+				</div>
+				{{/each}}
+				{{/if}}
+				{{/each}}
+			</div>
+			{{pagination}}
+		</div>
+	</div>
+</div>
+
+<div class="uk-section uk-section-muted">
+	<div class="uk-width-1-1">
+		<div class="uk-container uk-container-default">
+			<div uk-grid class="uk-child-width-1-2@m uk-grid-divider">
+				<div>
+					<h2>{{t 'promoted_articles'}}</h2>
+					<ul class="uk-list uk-list-divider">
+						{{#each promoted_articles}}
+						<li class="">
+							<a href="{{url}}">
+								{{title}}
+
+								{{#if internal}}
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" focusable="false"
+									viewBox="0 0 16 16" class="icon-lock" title="{{t 'internal'}}">
+									<rect width="12" height="9" x="2" y="7" fill="currentColor" rx="1" ry="1" />
+									<path fill="none" stroke="currentColor" d="M4.5 7.5V4a3.5 3.5 0 017 0v3.5" />
+								</svg>
+								{{/if}}
+							</a>
+						</li>
+						{{/each}}
+					</ul>
+				</div>
+				<div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div class="container">
-  <section class="section knowledge-base">
-    <h2 class="visibility-hidden">{{ t 'categories' }}</h2>
-    <section class="categories blocks">
-      <ul class="blocks-list">
-        {{#each categories}}
-          {{#if ../has_multiple_categories}}
-            <li class="blocks-item">
-              <a href='{{url}}' class="blocks-item-link">
-                <span class="blocks-item-title">{{name}}</span>
-                <span class="blocks-item-description">{{excerpt description}}</span>
-              </a>
-            </li>
-          {{else}}
-            {{#each sections}}
-              <li class="blocks-item">
-                <a href='{{url}}' class="blocks-item-link">
-                  <span class="blocks-item-title">
-                    {{name}}
-                  </span>
-                  <span class="blocks-item-description">{{excerpt description}}</span>
-                </a>
-              </li>
-            {{/each}}
-          {{/if}}
-        {{/each}}
-      </ul>
-      {{pagination}}
-    </section>
+	<section class="section knowledge-base">
 
-    {{#if promoted_articles}}
-      <section class="articles">
-        <h2>{{t 'promoted_articles'}}</h2>
-        <ul class="article-list promoted-articles">
-          {{#each promoted_articles}}
-            <li class="promoted-articles-item">
-                <a href="{{url}}">
-                  {{title}}
 
-                  {{#if internal}}
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" focusable="false" viewBox="0 0 16 16" class="icon-lock" title="{{t 'internal'}}">
-                      <rect width="12" height="9" x="2" y="7" fill="currentColor" rx="1" ry="1"/>
-                      <path fill="none" stroke="currentColor" d="M4.5 7.5V4a3.5 3.5 0 017 0v3.5"/>
-                    </svg>
-                  {{/if}}
-                </a>
-            </li>
-          {{/each}}
-        </ul>
-      </section>
-    {{/if}}
-  </section>
+	{{#if help_center.community_enabled}}
+	<section class="section home-section community">
+		<h2>{{t 'community'}}</h2>
+		{{#link 'community' class='community-link'}}
+		{{t 'join_conversation'}}
+		{{/link}}
 
-  {{#if help_center.community_enabled}}
-    <section class="section home-section community">
-      <h2>{{t 'community'}}</h2>
-      {{#link 'community' class='community-link'}}
-        {{t 'join_conversation'}}
-      {{/link}}
+		<div class="community-image"></div>
+	</section>
+	{{/if}}
 
-      <div class="community-image"></div>
-    </section>
-  {{/if}}
-
-  <section class="section home-section activity">
-    {{#if settings.show_recent_activity}}
-      {{recent_activity}}
-    {{/if}}
-  </section>
+	<section class="section home-section activity">
+		{{#if settings.show_recent_activity}}
+		{{recent_activity}}
+		{{/if}}
+	</section>
 </div>
